# Crew-AI-Projects

./: Push.txt
marketresearcher/: .gitignore  README.md  pyproject.toml
marketresearcher/src/marketresearcher/: agents.py  crew.py  main.py
