[project]
name = "marketresearcher"
version = "0.1.0"
description = "MarketResearcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
marketresearcher = "marketresearcher.main:run"
run_crew = "marketresearcher.main:run"
train = "marketresearcher.main:train"
replay = "marketresearcher.main:replay"
test = "marketresearcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
